tests/snapshots/ui__example_var_loop.snap
---
source: tests/ui.rs
expression: file_contents
---
// Test 2: Loops

int x;
int arr[10];

int main() {
    x = 5;
    for (x = 0; x < 10; x = x + 1) {
        arr[x] = x;
    }
    return 0;
}

