tests/snapshots/ui__file_2.snap
---
source: tests/ui.rs
expression: "unindent(r#\"\n        #include \"minicio.h\"\n\n        int mod(int a, int b) {\n            return a - (a / b) * b;\n        }\n\n        int gcd(int a, int b) {\n            if (b == 0) {\n                return a;\n            } else {\n                return gcd(b, mod(a, b));\n            }\n        }\n\n        int main() {\n            int a = getint();\n            int b = getint();\n            int divisor = gcd(a, b);\n\n            putint(divisor);\n            putnewline();\n\n            return 0;\n        }\n    \"#)"
---
#include "minicio.h"

int mod(int a, int b) {
    return a - (a / b) * b;
}

int gcd(int a, int b) {
    if (b == 0) {
        return a;
    } else {
        return gcd(b, mod(a, b));
    }
}

int main() {
    int a = getint();
    int b = getint();
    int divisor = gcd(a, b);

    putint(divisor);
    putnewline();

    return 0;
}

