tests/snapshots/ui__store_variable_value.snap
---
source: tests/ui.rs
expression: "test_sushi(unindent(\"\n        let x = 10;\n        let y = x + 10;\n        let z = y;\n        assert(z == 20);\n    \"))"
---
### stdout ###
[EMPTY]
### stderr ###
[EMPTY]

