tests/snapshots/ui__undefined_variable.snap
---
source: tests/ui.rs
expression: "test_sushi(\"x;\").unwrap()"
---
### stdout ###
[EMPTY]
### stderr ###
[EMPTY]

